        when using dynamic proxies (via wrap() for example). It only overwrites
        them if the default preferences state (empty lists) is found at invocation
        time. Suggested by Christoph Dietze.
      - The visibility of several methods on UniformResource and ClientResource
        has been changed to public.
      - Added Protocol#SDC constant for the Secure Data Connector protocol.
    - Enhancements
      - Added new HTTPS client connector based on the internal non-blocking NIO
        connector. Co-developped with NetDev.
      - The SDC protocol to connect to intranets from the cloud is now also 
        supported on the GAE edition via the org.restlet.ext.net extension. It 
        automatically sets the "use_intranet" HTTP header and increases the
        portability of your code between Restlet/GAE and other Restlet editions. 
        As SDC is natively supported on GAE, it doesn't require the 
        org.restlet.ext.sdc extension.
    - Bug fixed
      - Throwing a ResourceException with a given status, was resulting in
        500 status being returned to the client instead of the given status.
        Reported by Avi Flax and Rhett Sutphin.
      - Fixed bug with unlimited IO timeouts in internal HTTP connector.
        Reported by Michael Guiral.
    - Misc
      - The simplified logging formatter (one line) is now available only in
        the Java SE edition as it could cause troubles with Java EE container
        and potentially GAE/Android as we reconfigure the default log manager
        programmatically. Reported by Kristoffer Gronowski and Bo Xing.
      - Moved all SSL dependencies from the engine into the "org.restlet.ext.ssl"
        extension, forcing it as a new extension for several other ones such as
        Jetty, Apache HTTP Client or Simple. This extension takes more importance
        as it also contains the new scalable HTTPS/NIO internal connector just